--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Griot Theater</title>
+    <link rel="stylesheet" href="css/styles.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,31 +15,46 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg bg-light">
+      <nav class="navbar navbar-expand-lg bg-black navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Griot Theater</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
+          <a class="navbar-brand" style="font-size: 2em; font-family: Georgia; font-weight: bold"href="#">Griot Theater</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-              <a class="nav-link" href="#">Features</a>
-              <a class="nav-link" href="#">Our Actors</a>
-              <a class="nav-link" href="#">Mission</a>
-              <a class="nav-link" href="#">Contact</a>
-            </div>
+          <div class="collapse navbar-collapse justify-content-center"  id="navbarTogglerDemo02">
+            <ul class="navbar-nav ms-xxl-auto">
+              <li class="nav-item">
+                <a id="home_link"class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a id="features_link"class="nav-link active" href="#">Features</a>
+              </li>
+              <li class="nav-item">
+                <a id="actors_link"class="nav-link active" href="#">Our Actors</a>
+              </li>
+              <li class="nav-item">
+                <a id="Mission_link"class="nav-link active" href="#">Mission</a>
+              </li>
+              <li id="contact_link"class="nav-item">
+                <a class="nav-link active" href="#">Contact</a>
+              </li>
+            </ul>
           </div>
         </div>
       </nav>
+      
+      <div class="container-fluid">
+        <div class="row">
+          <div class="card bg-dark text-white">
+            <img
+              src="/images/theater-image-background.png" class="card-img" alt="..."/>
+            <div class="card-img-overlay">
+              <h1 id="show" class="card-title">Featured Shows</h1>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
     </header>
 
     <main></main>
