--- a/static/index.html
+++ b/static/index.html
@@ -15,49 +15,71 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg bg-black navbar-dark">
+      <nav class="navbar navbar-expand-lg bg-black navbar-dark fixed-top">
         <div class="container-fluid">
-          <a class="navbar-brand" style="font-size: 2em; font-family: Georgia; font-weight: bold"href="#">Griot Theater</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+          <a class="navbar-brand" href="#">Griot</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse justify-content-center"  id="navbarTogglerDemo02">
-            <ul class="navbar-nav ms-xxl-auto">
+          <div
+            class="collapse navbar-collapse justify-content-evenly"
+            id="navbarNav"
+          >
+            <ul class="navbar-nav">
               <li class="nav-item">
-                <a id="home_link"class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a id="features_link"class="nav-link active" href="#">Features</a>
+                <a class="nav-link active" href="#">Features</a>
               </li>
               <li class="nav-item">
-                <a id="actors_link"class="nav-link active" href="#">Our Actors</a>
+                <a class="nav-link active" href="#">Actors</a>
               </li>
               <li class="nav-item">
-                <a id="Mission_link"class="nav-link active" href="#">Mission</a>
+                <a class="nav-link active" href="#">Mission</a>
               </li>
-              <li id="contact_link"class="nav-item">
+              <li class="nav-item">
                 <a class="nav-link active" href="#">Contact</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
-      
-      <div class="container-fluid">
-        <div class="row">
-          <div class="card bg-dark text-white">
-            <img
-              src="/images/theater-image-background.png" class="card-img" alt="..."/>
-            <div class="card-img-overlay">
-              <h1 id="show" class="card-title">Featured Shows</h1>
-            </div>
-          </div>
+      <div class="card bg-dark text-white">
+        <img
+          src="/images/theater-image-background.png"
+          class="card-img"
+          alt="Griot Theatre Company"
+        />
+        <div class="card-img-overlay">
+          <h1 class="card-title">Featured Shows</h1>
         </div>
-      </div>
       </div>
     </header>
 
-    <main></main>
+    <main>
+      <div class="container justify-content-center whitebox">
+        <div class="row">
+          <div class="col">
+            <img src="/images/a-raisin-in-the-sun-theater-1.png" alt="" />
+          </div>
+          <div class="col">
+            <h2>Raisin in the Sun</h2>
+          </div>
+          <div class="col">
+            <button disabled="disabled">Ready</button>
+          </div>
+        </div>
+      </div>
+    </main>
 
     <footer></footer>
     <script
