--- a/static/index.html
+++ b/static/index.html
@@ -66,22 +66,141 @@
     </header>
 
     <main>
+      <div class="top"></div>
       <div class="container justify-content-center whitebox">
         <div class="row">
           <div class="col">
             <img src="/images/a-raisin-in-the-sun-theater-1.png" alt="" />
           </div>
           <div class="col">
-            <h2>Raisin in the Sun</h2>
+            <br />
+            <h3>Raisin in the Sun</h3>
+            <br />
+            <h4>April 6, 2020 - March 12, 2021</h4>
+            <br />
+            <h5>Griot Theatre, 233 State St Chicago, IL</h5>
+            <br />
+            <h6>$75</h6>
           </div>
           <div class="col">
-            <button disabled="disabled">Ready</button>
+            <button type="button" class="btn btn-warning">Read More</button>
+          </div>
+        </div>
+      </div>
+      <hr />
+      <div class="container justify-content-center whitebox">
+        <div class="row">
+          <div class="col">
+            <img src="/images/a-raisin-in-the-sun-theater-1.png" alt="" />
+          </div>
+          <div class="col">
+            <br />
+            <h3>Raisin in the Sun</h3>
+            <br />
+            <h4>April 6, 2020 - March 12, 2021</h4>
+            <br />
+            <h5>Griot Theatre, 233 State St Chicago, IL</h5>
+            <br />
+            <h6>$75</h6>
+          </div>
+          <div class="col">
+            <button type="button" class="btn btn-warning">Read More</button>
+          </div>
+        </div>
+      </div>
+      <hr />
+      <div class="container justify-content-center whitebox">
+        <div class="row">
+          <div class="col">
+            <img src="/images/a-raisin-in-the-sun-theater-1.png" alt="" />
+          </div>
+          <div class="col">
+            <br />
+            <h3>Raisin in the Sun</h3>
+            <br />
+            <h4>April 6, 2020 - March 12, 2021</h4>
+            <br />
+            <h5>Griot Theatre, 233 State St Chicago, IL</h5>
+            <br />
+            <h6>$75</h6>
+          </div>
+          <div class="col">
+            <button type="button" class="btn btn-warning">Read More</button>
+          </div>
+        </div>
+      </div>
+      <hr />
+      <div class="container justify-content-center whitebox">
+        <div class="row">
+          <div class="col">
+            <img src="/images/a-raisin-in-the-sun-theater-1.png" alt="" />
+          </div>
+          <div class="col">
+            <br />
+            <h3>Raisin in the Sun</h3>
+            <br />
+            <h4>April 6, 2020 - March 12, 2021</h4>
+            <br />
+            <h5>Griot Theatre, 233 State St Chicago, IL</h5>
+            <br />
+            <h6>$75</h6>
+          </div>
+          <div class="col">
+            <button type="button" class="btn btn-warning">Read More</button>
           </div>
         </div>
       </div>
     </main>
+    <hr />
+    <footer>
+      <div class="container-fluid bottom">
+        <div class="row">
+          <div class="col chicago">
+            <img src="/images/chicago.jpeg" alt="chicago" />
+          </div>
+          <div class="col info">
+            <h1 style="color: white">Info</h1>
+            <br />
+            <br />
+            <p>Chicago, Il 60611</p>
+            <br />
+            <br />
+            <p>example@example.com</p>
+            <br />
+            <br />
+            <p>13134098582</p>
+          </div>
+          <div class="col shows">
+            <h1 style="color: white">Shows</h1>
+            <br />
+            <br />
+            <p>The Raisin In The Sun</p>
+            <br />
+            <br />
+            <p>The NutCracker</p>
+            <br />
+            <br />
+            <p>Shashank Redemption</p>
+            <br />
+            <br />
+            <p>The Color Purple</p>
+          </div>
 
-    <footer></footer>
+          <div class="col social">
+            <h1 style="color: white">Social</h1>
+            <br />
+            <br />
+            <p>Twitter</p>
+            <br />
+            <br />
+            <p>Facebook</p>
+            <br />
+            <br />
+            <p>Instagram</p>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
       integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
